# S-kerSite

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/api/: audit.py  auth.py  config.py  database.py  main.py  models.py  scheduler.py  schemas.py  seed.py  storage.py  websocket.py
apps/api/api/routers/: auth.py  cameras.py  compliance.py  events.py  health.py  websocket.py
apps/api/tests/: conftest.py  test_auth.py  test_health.py
apps/edge/: Dockerfile  pyproject.toml  requirements.txt
apps/edge/edge/: config.py  event_emitter.py  face_blur.py  main.py  mock_generator.py  ppe_detector.py  rtsp_worker.py
apps/edge/tests/: test_face_blur.py  test_mock_generator.py  test_ppe_detector.py
apps/web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(protected)/cameras/: page.tsx
apps/web/src/app/(protected)/compliance/: page.tsx
apps/web/src/app/(protected)/dashboard/: page.tsx
apps/web/src/app/(protected)/events/: page.tsx
apps/web/src/app/(protected)/events/[id]/: page.tsx
apps/web/src/components/layout/: nav.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx
apps/web/src/lib/: api.ts  auth-store.ts  websocket.ts
docs/: architecture.md  getting-started.md
docs/compliance/: DPIA-template.md  IMY-checklist.md  ai-act-notes.md  signage-en.md  signage-sv.md  union-consultation-template.md
infra/: docker-compose.yml
infra/nginx/: nginx.conf
