[project]
name = "sakersite-edge"
version = "0.1.0"
description = "SakerSite edge worker: RTSP ingest, YOLO PPE detection, face blur"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.9.0",
    "ultralytics>=8.2.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
